--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "BLog api dev",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start" : "npm server.js"
   },
   "repository": {
