--- a/package.json
+++ b/package.json
@@ -4,25 +4,26 @@
     "description": "BLog api dev",
     "main": "server.js",
     "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1",
-      "start": "node server.js"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node server.js"
     },
     "repository": {
-      "type": "git",
-      "url": "git+https://github.com/Sukkoth/BlogAPI.git"
+        "type": "git",
+        "url": "git+https://github.com/Sukkoth/BlogAPI.git"
     },
     "author": "sukkoth",
     "license": "ISC",
     "bugs": {
-      "url": "https://github.com/Sukkoth/BlogAPI/issues"
+        "url": "https://github.com/Sukkoth/BlogAPI/issues"
     },
     "homepage": "https://github.com/Sukkoth/BlogAPI#readme",
     "dependencies": {
-      "bcryptjs": "^2.4.3",
-      "dotenv": "^16.0.3",
-      "express": "^4.18.2",
-      "express-async-handler": "^1.2.0",
-      "jsonwebtoken": "^9.0.0",
-      "mongoose": "^6.9.0"
+        "bcryptjs": "^2.4.3",
+        "dotenv": "^16.0.3",
+        "express": "^4.18.2",
+        "express-async-handler": "^1.2.0",
+        "jsonwebtoken": "^9.0.0",
+        "mongoose": "^6.9.0",
+        "nodemon": "^2.0.22"
     }
-  }
+}
