update scripts, uninstall nodemon

--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
     "main": "server.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "node start.js",
-        "prod": "nodemon start.js"
+        "start": "node server.js"
     },
     "repository": {
         "type": "git",
@@ -24,7 +23,6 @@
         "express": "^4.18.2",
         "express-async-handler": "^1.2.0",
         "jsonwebtoken": "^9.0.0",
-        "mongoose": "^6.9.0",
-        "nodemon": "^2.0.22"
+        "mongoose": "^6.9.0"
     }
 }
